[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.8.3", features = ["transport", "tls"] }
prost = "0.11.3"
prost-types = "0.11.2"
tokio = { version = "1.23.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.8.4"